# ilogtail

./: .clang-format  .codecov.yml  .dockerignore  .gitbook.yaml  .gitignore  .golangci.yml  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README-cn.md  README.md  a.yaml  aggregator.go  collector.go  context.go  control.go  flusher.go  global.json  go.mod  go.sum  input.go  loggroup_queue.go  pipeline.go  pipeline_collector.go  plugin.go  plugin.json  plugins.yml  processor.go  self_metric.go  upload_release_assets.sh
core/: CMakeLists.txt  dependencies.cmake  links.cmake  logtail.cpp  logtail_windows.cpp  main.cmake  options.cmake  utils.cmake
core/Go_pipeline/: CMakeLists.txt  LogtailPlugin.cpp  LogtailPlugin.h
core/aggregator/: Aggregator.cpp  Aggregator.h  AggregatorDefault.h  BatchItem.h  BatchStatus.h  CMakeLists.txt  FlushStrategy.cpp  FlushStrategy.h  TimeoutFlushManager.cpp  TimeoutFlushManager.h
core/app/: App.cpp  App.h  CMakeLists.txt
core/app_config/: AppConfig.cpp  AppConfig.h  AppConfigBase.cpp  AppConfigBase.h  CMakeLists.txt
core/application/: Application.cpp  Application.h  CMakeLists.txt
core/arms_metrics_pb/: CMakeLists.txt  MeasureBatches.pb.cc  MeasureBatches.pb.h  MeasureBatches.proto
core/batch/: BatchItem.h  BatchStatus.h  BatchedEvents.h  Batcher.h  CMakeLists.txt  FlushStrategy.cpp  FlushStrategy.h  TimeoutFlushManager.cpp  TimeoutFlushManager.h
core/checkpoint/: AdhocCheckpointManager.cpp  AdhocCheckpointManager.h  AdhocFileCheckpoint.cpp  AdhocFileCheckpoint.h  AdhocJobCheckpoint.cpp  AdhocJobCheckpoint.h  CMakeLists.txt  CheckPointManager.cpp  CheckPointManager.h  CheckpointManagerV2.cpp  CheckpointManagerV2.h  RangeCheckpoint.cpp  RangeCheckpoint.h
core/cms/: CMakeLists.txt  CmsMain.cpp  CmsMain.h  Makefile  cms.cmake  sync.sh
core/common/: BoostRegexValidator.cpp  CMakeLists.txt  CircularBuffer.h  CompressTools.cpp  CompressTools.h  Constants.cpp  Constants.h  CrashBackTraceUtil.cpp  CrashBackTraceUtil.h  DNSCache.cpp  DNSCache.h  DevInode.cpp  DevInode.h  DynamicLibHelper.cpp  DynamicLibHelper.h  EncodingConverter.cpp  EncodingConverter.h  EncodingUtil.cpp  EncodingUtil.h  EndpointUtil.cpp  EndpointUtil.h  EnvUtil.cpp  EnvUtil.h  ErrorUtil.h  ExceptionBase.h  FeedbackInterface.h  FileEncryption.cpp  FileEncryption.h  FileInfo.h  FileSystemUtil.cpp  FileSystemUtil.h  Flags.h  GetUUID.cpp  GlobalPara.h  HashUtil.cpp  HashUtil.h  JsonUtil.cpp  JsonUtil.h  LRUCache.h  Lock.h  (+57 more)
core/compression/: CMakeLists.txt  CompressType.h  Compressor.h  CompressorFactory.cpp  CompressorFactory.h  LZ4Compressor.cpp  LZ4Compressor.h  SnappyCompressor.cpp  SnappyCompressor.h  ZstdCompressor.cpp  ZstdCompressor.h
core/config/: CMakeLists.txt  Config.cpp  Config.h  ConfigDiff.h  ConfigUtil.cpp  ConfigUtil.h  DockerFileConfig.cpp  DockerFileConfig.h  InstanceConfig.cpp  InstanceConfig.h  InstanceConfigManager.cpp  InstanceConfigManager.h  IntegrityConfig.h  LogType.h  NewConfig.cpp  NewConfig.h  PipelineConfig.cpp  PipelineConfig.h  ProcessConfig.cpp  ProcessConfig.h  TaskConfig.cpp  TaskConfig.h  UserLogConfigParser.cpp  UserLogConfigParser.h
core/config_manager/: BytedanceConfigService.cpp  BytedanceConfigService.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ConfigManagerBase.cpp  ConfigManagerBase.h  ConfigServiceClient.cpp  ConfigServiceClient.h  ConfigYamlToJson.cpp  ConfigYamlToJson.h  VolcengineConfigServiceClient.cpp  VolcengineConfigServiceClient.h
core/config_server_pb/: CMakeLists.txt  agent.pb.cc  agent.pb.h
core/constants/: Constants.cpp  Constants.h  EntityConstants.cpp  EntityConstants.h  SpanConstants.cpp  SpanConstants.h  TagConstants.cpp  TagConstants.h
core/container_manager/: CMakeLists.txt  ConfigContainerInfoUpdateCmd.h  ContainerDiscoveryOptions.cpp  ContainerDiscoveryOptions.h  DockerContainerPathCmd.h
core/controller/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  EventDispatcherBase.cpp  EventDispatcherBase.h  LogtailInsightDispatcher.cpp  LogtailInsightDispatcher.h
core/ebpf/: CMakeLists.txt  Config.cpp  Config.h  SelfMonitor.cpp  SelfMonitor.h  SourceManager.cpp  SourceManager.h  config.cpp  config.h  eBPFServer.cpp  eBPFServer.h
core/event/: BlockEventManager.cpp  BlockEventManager.h  CMakeLists.txt  Event.h  EventQueue.cpp  EventQueue.h
core/event_handler/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  HistoryFileImporter.cpp  HistoryFileImporter.h  LogInput.cpp  LogInput.h
core/event_listener/: CMakeLists.txt  EventListener.h  EventListener_Linux.cpp  EventListener_Linux.h
core/file/: CMakeLists.txt  FileServer.cpp  FileServer.h
core/file_server/: AdhocFileManager.cpp  AdhocFileManager.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ContainerInfo.cpp  ContainerInfo.h  DockerContainerPath.cpp  DockerContainerPath.h  EventDispatcher.cpp  EventDispatcher.h  FileDiscoveryOptions.cpp  FileDiscoveryOptions.h  FileServer.cpp  FileServer.h  FileTagOptions.cpp  FileTagOptions.h  MultilineOptions.cpp  MultilineOptions.h
core/flusher/: CMakeLists.txt  Flusher.h  FlusherArmsMetrics.cpp  FlusherArmsMetrics.h  FlusherPushGateway.cpp  FlusherPushGateway.h  FlusherRemoteWrite.cpp  FlusherRemoteWrite.h  FlusherSLS.cpp  FlusherSLS.h  FlusherXTrace.cpp  FlusherXTrace.h  flusher.cmake  links.cmake
core/fuse/: CMakeLists.txt  FuseFileBlacklist.h  UlogfsHandler.h  ulogfslib_file.h  ulogfslib_file_dummy.cpp
core/go_pipeline/: CMakeLists.txt  LogtailPlugin.cpp  LogtailPlugin.h  LogtailPluginAdapter.cpp  LogtailPluginAdapter.h  LogtailRuntimePluginAdapter.cpp
core/helper/: CMakeLists.txt  LogtailInsight.cpp  LogtailInsight.h
core/host_monitor/: Constants.cpp  Constants.h  HostMonitorInputRunner.cpp  HostMonitorInputRunner.h  HostMonitorTimerEvent.cpp  HostMonitorTimerEvent.h  SystemInformationTools.cpp  SystemInformationTools.h
core/ilogtail_metric/: CMakeLists.txt  ILogtaiMetric.cpp  ILogtailMetric.h  MetricConstants.h  MetricExportor.cpp  MetricExportor.h
core/input/: CMakeLists.txt  Input.h  InputContainerLog.cpp  InputContainerLog.h  InputFile.cpp  (+45 more)
(+4770 files in other folders)
